# weaver

./: Cargo.toml  README.md
doc/: all.html  fn.find_solutions.html  fn.main.html  index.html  sidebar-items.js
doc/defs/: constant.DISP_VECTORS.html  constant.LAST_ROW.html  index.html  sidebar-items.js  struct.CsvVector.html  struct.Spinner.html  struct.Weft.html  trait.AbSumV.html  trait.AbsOf.html  trait.AddVec.html  trait.AdjEdges.html  trait.AlignToEdge.html  trait.Bridge.html  trait.Certify.html  trait.Convert.html  trait.CutYarn.html  trait.DequeExtEnds.html  trait.DrainFrom.html  trait.ExtendBack.html  trait.ExtendFront.html  trait.ExtendThreads.html  trait.GetEdges.html  trait.GetUon.html  trait.GetWeftWarps.html  trait.InfoN.html  trait.IsAdjacent.html  trait.MakeEadjs.html  trait.MakeEdges.html  trait.Mirrored.html  trait.OrientAscending.html  trait.PinEnds.html  trait.Prepare.html  trait.ReverseIterator.html  trait.ReverseIteratorSlice.html  trait.ReversedVec.html  trait.SerializeToCsv.html  trait.Spin.html  trait.Switch.html  type.Adjacency.html  type.Count.html  (+33 more)
doc/graph/: index.html  sidebar-items.js
doc/utils/: index.html  sidebar-items.js
doc/utils/certify/: enum.SequenceID.html  index.html  sidebar-items.js
doc/utils/debug/: fn.calculate_sizes.html  fn.get_current_date_time.html  index.html  sidebar-items.js  struct.DateTimeString.html
doc/utils/iters/: fn.uon.html  index.html  sidebar-items.js
doc/utils/make/: index.html  (+12 more)
src/: main.rs
src/graph/: defs.rs  extras.rs  mod.rs  ops.rs  types.rs  utils.rs  weave.rs
src/ignoreme/: paste.txt
